--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="/join.html" class="join">Join the club</a></li>
+                    <li><a href="/popup/index.html" class="join">Join the club</a></li>
                     <li><a href="/news.html">Latest News</a></li>
                     <li><a href="/games.html">New Games</a></li>
                     <li><a href="/contact.html">Contact</a></li>
